--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build the Docker image
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      run: docker build . --file AuthAPI/Dockerfile --tag ${DOCKER_USER}/auth-svc:latest-main
+      run: docker build . --file Dockerfile --tag ${DOCKER_USER}/auth-svc:latest-main
     - name: Push Docker image to Docker Hub
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
